2009-09-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el (tinyeat-install-default-bindings): Rethink
	key bindings from non-window perspective. MANY KEYS
	HAVE BEEN RELOCATED FOR BETTER NON-WINDOW ACCESS.

	* tiny/tinyperl.el (tinyperl-install-variables-lookup): Add
	word 'wait'.
	(tinyperl-pod2text): Work around bug in Perl library
	Pod::Text.
	(tinyperl-pod-by-module): Correct Modules find algorithm.

	* tiny/tinyprocmail.el: Modernize all macros.
	Adjust indentation in all defuns.

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag): Correct
	interactive spec.
	(tinydebian-bts-mail-compose-macro): Call
	`turn-on-tinydebian-mail-mode'
	(History): adjust wording.
	(tinydebian-bts-mode-maybe-turn-on): Improve regexp.

2009-09-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-browse-url-main-interactive):
	Prefer `url-str' if found. This correctly finds launchpad URLs.

2009-09-13  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyadvice.el (shell): Correct doxstring.
	(vc-do-command): Remove (old RCS).
	(vc-register): Remove (old RCS).
	(vc-print-log): Remove (old).
	(tinyadvice-vc-register): Remove (old RCS).
	(vc-register): Remove (old RCS).
	(vc-mode-line): Remove (old RCS).
	(tinymy-rcs-p): Remove (old RCS).
	(vc-do-command): Remove (old RCS).
	(tinyadvice-rcs-initial-comment): Remove (old RCS).
	(display-time-process-this-message): Remove. Obsolete XEmacs.
	(save-buffers-kill-emacs): Remove. Obsoleted by 20.x.
	(fill-paragraph): Remove. Obsoleted by 19.28.
	(tinyadvice-elts): Modernize macro.
	(ange-ftp-dired-run-shell-command): Obsoleted by tramp.el.
	(compile-internal): Obsolete.
	(tinyadvice-:compile-internal-buffer): Remove.
	(tinyadvice-:compile-internal-hook): Remove.
	(imenu): Remove.

	* tiny/tinylibm.el (ti::list-find): Cosmetic changes.

	* tiny/tinylisp.el (tinylisp-load-history-car): New.
	(tinylisp-load-history-grep): Use `tinylisp-load-history-car'.
	(tinylisp-library-load-by-regexp): Improve docstring.